<resources>
    <string name="app_name">Food Checkout</string>
    <string name="meal_name">Cheese Burger</string>
    <string name="meal_description">
        A properly seasoned patty topped with a slice of fresh tomato, cheese and lettuce enclosed in a
        fluffy bun. It’s accompanied with a side of fries with a sweet and spicy dip.
    </string>
    <string name="meal_price">Pay &#x20A6;4,000</string>
    <string name="payment_prompt">Card details</string>
    <string name="card_number">Card Number</string>
    <string name="card_expiry">Card Expiry</string>
    <string name="card_cvv">CVV</string>
</resources>